2001-02-28  Masatake YAMATO  <yamato@redhat.com>

 	Applied a patch from Martin.

	* output-emf.c: Now supports centerline.

2001-02-27  Masatake YAMATO  <yamato@redhat.com>

	* NEWS: Write about dxf.

 	Applied a patch from Martin.

	* NEWS: Updated.	

	* output.c: Don't include output-dxf.h and
	output-dxf12.h.

2001-02-26  Masatake YAMATO  <yamato@redhat.com>

 	Applied a patch from Martin.
	
	* output.c: Remove dxf supports.

 	* Makefile.am (output_src): Likewise.

	* autotrace.dsw: Updated.

	* autotrace.dsp: Likewise.
	
2001-02-25  Masatake YAMATO  <yamato@redhat.com>

	Applied two patches from Martin.

	* output-p2e.c: Now supports centerline.

 	* output-sk.c: Likewise.

	* output-svg.c: Likewise.	

2001-02-25 Ian MacPhedran <Ian_MacPhedran@engr.USask.Ca>

	* output-fig.c: Updated.
	Added support for the "centerline" option
	Added code to reduce the number of FIG "levels" produced
 
2001-02-24  Masatake YAMATO  <yamato@redhat.com>

	Applied patches from Martin.
	
	* output-eps.c: Made the centerline eps output 
	compatible to CorelDraw.

	Applied patches from Martin.

	* thin-image.c: 
	Made it C++ compatible again (replaced delete by todelete) and 
	removed some warnings.

 	* output-er.c: Made it C++ compatible, replaced malloc my 
	XMALLOC and removed some unnecessary code.

	* pxl-outline.c: Moved edge.h to pxl-outline.c, some cleanup and
	removed some warnings.

	* edge.h: Removed, because the code was added to pxl-outline.c.

2001-02-24  Masatake YAMATO  <yamato@redhat.com>

	* median.c (quantize): Applied a patch from Martin.
	-- I removed a bug in median.c:
	fixed wrong color count

2001-02-23  Masatake YAMATO  <yamato@redhat.com>

	* HACKING (Autofig): Updated.

	* autogen.sh: Check whether autofig is existed or not.

	Applied patches from Martin.
	-- I removed some compiler warnings in color.h 
	and pxl-outline.c. Also I have a new autotrace.dsp.

	* pxl-outline.c: Updated.

	* color.h: Updated.

	* autotrace.dsp: Updated.
